[FIX] Improve form styling on smaller devices

--- a/addons/proj_config/static/src/css/proj_theme_2021/gesagt_getan.css
+++ b/addons/proj_config/static/src/css/proj_theme_2021/gesagt_getan.css
@@ -17,7 +17,18 @@ small.text-muted {
   font-weight: 600;
   font-size: 18px;
 }
-
+.glyphicon-info-sign::before {
+  color: #929aa3;
+}
+label.text-danger::after {
+  content: "*";
+  color: red;
+}
+.form-control:hover {
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(215, 218, 219, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(215, 218, 219, 0.6);
+}
 #price_donate {
   box-shadow: none;
   border-bottom: 2px solid #e9ebec;
@@ -98,7 +109,6 @@ small.text-muted {
 
 #price_donate {
   margin-top: 1px;
-
   height: 70px;
 }
 input::-webkit-outer-spin-button,
@@ -152,7 +162,10 @@ input.form-control {
   color: #929aa3;
   font-size: 18px;
 }
-.form-inline .radio input[type="radio"]:checked {
+.form-inline label > .radio input[type="radio"]:checked {
+  color: red !important;
+}
+.form-inline .radio input[type="radio"]:checked::after {
   color: red;
 }
 .form-inline .radio label {
@@ -187,6 +200,8 @@ input.form-control {
   box-shadow: 0 5px 15px 0 rgba(231, 50, 48, 0.5);
   transition: box-shadow 0.5s ease;
   margin-bottom: 30px;
+  letter-spacing: 1.5px;
+  font-weight: 900;
 }
 .js_product .btn-primary.a-submit:focus,
 .js_product .btn-primary.a-submit:hover {
@@ -227,15 +242,22 @@ input.form-control {
   color: black;
   text-transform: capitalize;
 }
+
 #payment_method .nav > li > a {
   padding: 10px 30px;
   margin-left: 0;
+  width: 100%;
+  color: black;
+  font-weight: 600;
 }
+
+.tab-acquirer-image {
+  padding-right: 10px;
+}
+
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-  color: black;
-  font-weight: 600;
   cursor: default;
   background-color: #f4f5f6;
   border: none;
@@ -289,6 +311,26 @@ input.form-control {
   font-weight: 300;
   font-size: 16px;
 }
+@media only screen and (max-width: 991px) {
+  .ppt_opc .price_donate {
+    padding: 20px 0 !important;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  .input-group .input-group-lg {
+    width: 100%;
+  }
+  .nav-tabs > li {
+    float: left;
+    margin-bottom: -1px;
+    flex-basis: 50%;
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+  .wsd_opc_payment .col-lg-12:nth-child(2) {
+    height: 400px;
+  }
+}
 
 @media only screen and (max-width: 768px) {
   .js_product .btn-primary.a-submit {
@@ -298,9 +340,7 @@ input.form-control {
     margin-left: 75px;
     margin-top: 130px;
   }
-  .wsd_opc_payment .col-lg-12:nth-child(2) {
-    height: 400px;
-  }
+
   .ppt_opc .js_product h3::before {
     position: absolute;
     left: -50px;
@@ -315,12 +355,100 @@ input.form-control {
     left: -65px;
     top: -9px;
   }
-  .ppt_opc .price_donate {
-    padding: 20px 0 !important;
-    max-width: 100%;
-    margin-bottom: 20px;
-  }
   .ppt_opc .payment_interval_ids small.text-muted {
     margin: 25px 0;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .js_product h3 {
+    font-size: 20px;
+  }
+  .price_donate_suggested_outer .price_donate_suggested {
+    font-size: 28px;
+    padding-top: 37px;
+    min-width: 85px;
+    min-height: 70px;
+  }
+  .price_donate_suggested_outer .price_donate_suggested_currency {
+    font-size: 15px;
+    padding-top: 15px;
+    width: 85px;
+  }
+  .ppt_opc .js_product h3::before {
+    left: -22px;
+  }
+  #payment_method h3::before {
+    left: -51px;
+    top: 5px;
+  }
+  .price_donate_suggested_outer {
+    padding-right: 0;
+  }
+  .ppt_opc h3.checkout_title::before {
+    left: -51px;
+    top: 7px;
+  }
+  #website_sale_donate .ppt_opc-checkout {
+    margin-left: 0;
+    margin-top: 100px;
+  }
+  #website_sale_donate .container {
+    padding: 0;
+  }
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .ppt_opc-checkout .col-md-12 {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+  .form-group.has-feedback.col-xs-9,
+  .row.billing-fields > .col-xs-6 {
+    padding-right: 15px;
+  }
+  .row.billing-fields > .col-xs-6:last-child {
+    padding-right: 0 !important;
+  }
+  #wsd_checkout_form_inside_row .col-md-12,
+  .row.billing-fields .form-group {
+    padding: 0;
+  }
+  .js_sale.oe_website_sale.ppt.ppt_opc {
+    margin-left: 20px;
+  }
+  .ppt_opc .js_product h3::before {
+    padding-top: 5px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 5px;
+    font-size: 24px;
+  }
+  .price_donate .input-group-addon {
+    min-width: 50px;
+  }
+  .f-newsletter_web {
+    display: block;
+    padding-left: 35px;
+    text-indent: -35px;
+  }
+  .wsd_opc_payment .col-lg-12:nth-child(2) {
+    height: 450px;
+  }
+  #street_number_web {
+    padding-right: 0 !important;
+  }
+}
+@media only screen and (max-width: 357px) {
+  .price_donate_suggested_outer .price_donate_suggested {
+    font-size: 28px;
+    padding-top: 37px;
+    min-width: 65px;
+    min-height: 60px;
+  }
+  .price_donate_suggested_outer .price_donate_suggested_currency {
+    font-size: 15px;
+    padding-top: 15px;
+    width: 65px;
   }
 }
